# RemoteDetection

./: CMakeLists.txt  README.md  RemoteDetection.cpp  RemoteDetection.h  main.cpp
